<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:text="@string/account_title"
        android:textSize="25sp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBalanceText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"

        android:layout_marginTop="10dp"
        android:text="@string/balance_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Spinner
        android:id="@+id/spCurrency"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBalanceText"
        app:layout_constraintLeft_toRightOf="@+id/tvBalanceText" />

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"

        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="@+id/tvBalanceText"
        app:layout_constraintLeft_toRightOf="@+id/spCurrency" />

    <TextView
        android:id="@+id/tvFeeText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"

        android:text="@string/fee_text"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCurrency" />

    <Spinner
        android:id="@+id/spFeeCurrency"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFeeText"
        app:layout_constraintLeft_toRightOf="@+id/tvFeeText" />

    <TextView
        android:id="@+id/tvFee"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"

        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFeeText"
        app:layout_constraintLeft_toRightOf="@+id/spFeeCurrency" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal"
        android:text="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeeText" />

    <Spinner
        android:id="@+id/spExchangeFrom"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <TextView
        android:id="@+id/tvExchangeText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"

        android:gravity="center"
        android:text="@string/exchange_text"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="@+id/spExchangeFrom"
        app:layout_constraintLeft_toRightOf="@+id/spExchangeFrom" />

    <Spinner
        android:id="@+id/spExchangeTo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/spExchangeFrom"
        app:layout_constraintLeft_toRightOf="@+id/tvExchangeText" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/submit_exchange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spExchangeFrom" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"

        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/etAmount"
        app:layout_constraintLeft_toRightOf="@+id/etAmount" />

</android.support.constraint.ConstraintLayout>